<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_allItem"
            android:icon="@drawable/ic_menu_home_24"
            android:title="All Item"/>
        <item
            android:id="@+id/nav_passwords"
            android:icon="@drawable/ic_menu_key_24"
            android:title="@string/menu_passwords" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_menu_notes_24"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_addresses"
            android:icon="@drawable/ic_menu_location_on_24"
            android:title="@string/menu_addresses" />
    </group>

</menu>