<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_passwords">

    <fragment
        android:id="@+id/nav_passwords"
        android:name="com.example.passwordmanager.ui.password.PasswordFragment"
        android:label="@string/menu_passwords"
        tools:layout="@layout/fragment_password" />

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.example.passwordmanager.ui.notes.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/nav_addresses"
        android:name="com.example.passwordmanager.ui.addresses.AdressesFragment"
        android:label="@string/menu_addresses"
        tools:layout="@layout/fragment_adresses" />

    <fragment
        android:id="@+id/nav_allItem"
        android:name="com.example.passwordmanager.ui.all_item.ItemAllFragment"
        android:label="All Items"
        tools:layout="@layout/fragment_item_all"/>
</navigation>